Bug 557713 - encapsulate JSSLOT_ARGS_* within JSObject.  r=brendan.